RESOLVED FIXED310913
Rubberband animation restoration sometimes appears incorrect
https://bugs.webkit.org/show_bug.cgi?id=310913
Summary Rubberband animation restoration sometimes appears incorrect
Lily Spiniolas
Reported 2026-03-27 11:51:37 PDT
Attachments
Lily Spiniolas
Comment 1 2026-03-27 12:00:55 PDT
EWS
Comment 2 2026-03-27 15:15:09 PDT
Committed 310114@main (b3caa50f3bdc): <https://commits.webkit.org/310114@main> Reviewed commits have been landed. Closing PR #61512 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.